# missas.com.br

./: .cruft.json  .env.test  .gitignore  .lighthouserc.json  .pre-commit-config.yaml  AGENT.md  MIGRATION.md  Makefile  Makefile.rej  PRODUCTION_MIGRATION.md  README.md  SPEC.md  arquidioceses-capitais-brasileiras.md  arquidioceses-scraping-analysis.md  copilot-instructions.md  docker-compose.yml  goiania.jsonl  manage.py  package-lock.json  package.json  plan.md  porto_velho.jsonl  pyproject.toml  pyproject.toml.rej  render.yaml
.github/: copilot-instructions.md
.github/workflows/: claude-code-review.yml  claude.yml  copilot-setup-steps.yml  lighthouse-ci.yml  python-app.yml  template-update.yaml  template-update.yml
contrib/: README_CURITIBA.md  README_SAO_LUIS.md  README_joao_pessoa.md  aracaju.jsonl  aracaju_into_django.py  belem_into_django.py  bh_into_django.py  brasilia_contacts_into_django.py  campo_grande_README.md  campo_grande_contacts_into_django.py  campo_grande_schedules.jsonl  campo_grande_schedules_into_django.py  cuiaba_into_django.py  cuiaba_output.jsonl  curitiba_parishes.jsonl  curitiba_parishes_into_django.py  curitiba_schedules_into_django.py  env-sample  env-sample.rej  florianopolis.jsonl  florianopolis_into_django.py  fortaleza.jsonl  fortaleza_into_django.py  goiania_into_django.py  import.py  import_porto_velho.py  joao_pessoa_into_django.py  joao_pessoa_parishes.jsonl  maceio.jsonl  manaus.jsonl  manaus_into_django.py  natal.jsonl  natal_contacts.jsonl  natal_contracts_into_django.py  palmas.jsonl  palmas_into_django.py  recife.jsonl  recife_contacts.jsonl  recife_into_django.py  rs_into_django.py  (+41 more)
docs/architecture/decisions/: 0001-record-architecture-decisions.md  0002-postgres-to-sqlite.md  0003-geocoding-without-spatialite.md
missas/: asgi.py  settings.py  settings.py.rej  urls.py  wsgi.py
missas/core/: admin.py  apps.py  managers.py  models.py  urls.py  views.py
missas/core/facades/: google_maps.py
missas/core/fixtures/: cities.json  contacts_natal.json  locations.json  locations_natal.json  parishes_natal.json  rs_data.json  schedules_natal.json  sources.json  sources_natal.json  states.json
missas/core/migrations/: 0002_state_city_squashed_0003_alter_city_slug_alter_city_unique_together.py  0004_alter_city_state.py  0005_parish.py  0006_alter_parish_slug.py  0007_schedule.py  0008_alter_schedule_unique_together.py  0009_rename_time_schedule_start_time_and_more.py  0010_schedule_end_time.py  0011_schedule_type.py  0012_schedule_observation.py  0013_source.py  0014_default_source.py  0015_schedule_source.py  0016_alter_schedule_source.py  0017_city_created_at_city_updated_at_parish_created_at_and_more.py  0018_alter_city_created_at_alter_parish_created_at_and_more.py  0019_schedule_verified_at.py  0020_contact_parish_contact.py  0021_alter_parish_contact.py  0022_remove_parish_contact_contact_parish.py  0023_alter_contact_facebook.py  0024_alter_contact_parish.py  0024_alter_schedule_source.py  0025_alter_source_description_alter_source_type.py  0026_schedule_location.py  0027_alter_schedule_observation.py  0028_contactrequest.py  0029_alter_parish_name_alter_parish_slug.py  0029_create_cache_table.py  0029_location.py  0030_rename_location_schedule_location_name.py  (+28 more)
missas/locations/: apps.py  models.py
missas/static/: bootstrap.min.css.rej  bootstrap.min.js.rej  htmx.min.js  main.css  styles.css
(+56 files in other folders)
