[tool.poetry]
name = "missas"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
dj-database-url = "2.3.0"
django = "5.1.6"
django-extensions = "3.2.3"
django-htmx = "1.22.0"
django-model-utils = "5.0.0"
fontawesomefree = "6.6.0"
gunicorn = "23.0.0"
psycopg2-binary = "2.9.10"
python-decouple = "3.8"
sentry-sdk = {extras = ["django"], version = "2.21.0"}
whitenoise = {extras = ["brotli"], version = "6.9.0"}

[tool.poetry.group.dev.dependencies]
freezegun = "1.5.1"
model-bakery = "1.20.3"
pre-commit = "4.1.0"
pytest = "8.3.4"
pytest-django = "4.10.0"
pytest-mock = "3.14.0"

[tool.poetry.group.scrapers.dependencies]
llm = "^0.22"
scrapy = "2.12.0"


[tool.djlint]
blank_line_after_tag="endblock,extends"
blank_line_before_tag="block"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "missas.settings"
python_files = "tests.py test_*.py *_tests.py"


[tool.ruff]
select = ["E", "F", "I", "S"]
ignore = ["E501"]
line-length = 88

[tool.ruff.per-file-ignores]
"**/tests/**" = ["S101"]
