[project]
name = "missas"
version = "0.0.0"
description = ""
authors = []
requires-python = "~=3.12"
dependencies = [
  "dj-database-url==3.0.1",
  "django==5.2.7",
  "django-extensions==4.1",
  "django-htmx==1.26.0",
  "django-model-utils==5.0.0",
  "fontawesomefree==6.6.0",
  "googlemaps==4.10.0",
  "gunicorn==23.0.0",
  "psycopg[pool]==3.2.10",
  "python-decouple==3.8",
  "sentry-sdk[django]==2.39.0",
  "whitenoise[brotli]==6.11.0",
]


[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
cruft = "2.16.0"
freezegun = "1.5.5"
model-bakery = "1.20.5"
pre-commit = "4.5.0"
pytest = "9.0.2"
pytest-deadfixtures = "3.0.0"
pytest-cov = "7.0.0"
pytest-django = "4.11.1"
pytest-mock = "3.15.1"

[tool.poetry.group.scrapers.dependencies]
llm = "0.28"
scrapy = "2.13.4"


[tool.djlint]
blank_line_after_tag="endblock,extends"
blank_line_before_tag="block"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "missas.settings"
python_files = "tests.py test_*.py *_tests.py"


[tool.ruff]
select = ["E", "F", "I", "N804", "N805", "S"]
ignore = ["E501"]
line-length = 88

[tool.ruff.per-file-ignores]
"**/tests/**" = ["S101"]
